rust/protocols-sys/src/bindings.rs

extern "C" {
    pub fn server_rand_preprocess(
        sfhe: *const ServerFHE,
        num_rand: u32,
        rand: *const u64,
        share: *const u64,
        mac_share: *const u64,
        mac_key: u64,
    ) -> ServerTriples;
}
extern "C" {
    pub fn client_triples_preprocess(
        cfhe: *const ClientFHE,
        num_triples: u32,
        a_rand: *const u64,
        b_rand: *const u64,
    ) -> ClientTriples;
}
extern "C" {
    pub fn client_rand_preprocess(
        cfhe: *const ClientFHE,
        num_rand: u32,
        rand: *const u64,
    ) -> ClientTriples;
}
extern "C" {
    pub fn fc_preprocess_noise(
        sfhe: *const ServerFHE,
        data: *const Metadata,
        secret_share: *const u64,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn server_conv_online(
        sfhe: *const ServerFHE,
        data: *const Metadata,
        ciphertext: SerialCT,
        masks: *mut *mut *mut *mut ::std::os::raw::c_char,
        shares: *mut ServerShares,
    );
}
extern "C" {
    pub fn server_fc_online(
        sfhe: *const ServerFHE,
        data: *const Metadata,
        ciphertext: SerialCT,
        matrix: *mut *mut ::std::os::raw::c_char,
        shares: *mut ServerShares,
    );
}
extern "C" {
    pub fn server_triples_online(
        sfhe: *const ServerFHE,
        client_a: SerialCT,
        client_b: SerialCT,
        shares: *mut ServerTriples,
    );
}
extern "C" {
    pub fn server_rand_online(
        sfhe: *const ServerFHE,
        client_r: SerialCT,
        shares: *mut ServerTriples,
    );
}
extern "C" {
    pub fn client_conv_decrypt(
        cfhe: *const ClientFHE,
        data: *const Metadata,
        shares: *mut ClientShares,
    );
}
extern "C" {
    pub fn client_fc_decrypt(
        cfhe: *const ClientFHE,
        data: *const Metadata,
        shares: *mut ClientShares,
    );
}
extern "C" {
    pub fn client_triples_decrypt(
        cfhe: *const ClientFHE,
        a: SerialCT,
        b: SerialCT,
        c: SerialCT,
        a_mac: SerialCT,
        b_mac: SerialCT,
        c_mac: SerialCT,
        shares: *mut ClientTriples,
    );
}
extern "C" {
    pub fn client_rand_decrypt(
        cfhe: *const ClientFHE,
        share: SerialCT,
        mac_share: SerialCT,
        shares: *mut ClientTriples,
    );
}
extern "C" {
    pub fn client_free_keys(cfhe: *const ClientFHE);
}
extern "C" {
    pub fn server_free_keys(sfhe: *const ServerFHE);
}
extern "C" {
    pub fn free_ct(ct: *mut SerialCT);
}
extern "C" {
    pub fn client_conv_free(data: *const Metadata, shares: *mut ClientShares);
}
extern "C" {
    pub fn server_conv_free(
        data: *const Metadata,
        masks: *mut *mut *mut *mut ::std::os::raw::c_char,
        shares: *mut ServerShares,
    );
}
extern "C" {
    pub fn client_fc_free(shares: *mut ClientShares);
}
extern "C" {
    pub fn server_fc_free(
        data: *const Metadata,
        enc_matrix: *mut *mut ::std::os::raw::c_char,
        shares: *mut ServerShares,
    );
}
extern "C" {
    pub fn client_triples_free(shares: *mut ClientTriples);
}
extern "C" {
    pub fn server_triples_free(shares: *mut ServerTriples);
}
extern "C" {
    pub fn client_rand_free(shares: *mut ClientTriples);
}
extern "C" {
    pub fn server_rand_free(shares: *mut ServerTriples);
}
